--- a/overflow.html
+++ b/overflow.html
@@ -5,10 +5,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overflow</title>
+    <style>
+        .mega-box {
+            width: 400px;
+            height: 500px;
+            border: 5px solid slateblue;
+            overflow-y: scroll;
+            /* overflow: scroll;
+            overflow-x: hidden; */
+        }
+
+        .mengo-people {
+            width: 400px;
+            height: 500px;
+            border: 5px solid green;
+        }
+
+        .mini-mini {
+            width: 150px;
+            border: 3px solid indianred;
+            overflow: hidden;
+        }
+
+        .short-text {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    </style>
 </head>
 
 <body>
-
+    <h1>Ami khusi the godo godo</h1>
+    <div class="mini-mini">
+        <p class="short-text" title="If you want to get my money. sent me Bkash first">If you want to get my money. sent
+            me Bkash first
+        </p>
+    </div>
+    <div class="mega-box">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed numquam error nobis consectetur est fugit
+            voluptatum ipsam pariatur dolorem, ratione facilis totam, sapiente reprehenderit cupiditate? Voluptatibus
+            quaerat impedit iusto quibusdam cum saepe. Voluptatum quod eaque ipsam accusantium? Incidunt suscipit
+            consectetur, molestias perferendis eos maxime deleniti! Consequuntur assumenda incidunt ex qui, reiciendis
+            tempore, veniam adipisci voluptates alias at magni eveniet expedita nisi! Accusantium consectetur eveniet
+            maxime natus doloribus culpa ullam impedit fugit nulla optio, est aspernatur esse neque in consequuntur
+            excepturi error laudantium itaque incidunt beatae reiciendis voluptatum sequi accusamus? Aspernatur quos
+            aliquid quae qui, illo expedita nemo earum fuga mollitia itaque quibusdam molestias vero. Quo nobis odit
+            itaque, at repellendus omnis dolore laboriosam. Sint, quas? Sapiente mollitia laborum necessitatibus,
+            eveniet nam reprehenderit ex, doloribus explicabo facilis nemo quasi quam unde illum repudiandae dolores
+            aperiam, quaerat expedita beatae consequuntur quia nisi velit? Voluptates fugit commodi dolore temporibus
+            non quisquam quo aliquid obcaecati error porro! Voluptatum quis magni perferendis laborum quisquam.
+            Quisquam, architecto consectetur. Blanditiis dolorem quasi, ipsum dignissimos eius facilis inventore eum?
+            Consectetur tempora rerum ullam quod non aliquam repellat facere, perspiciatis hic mollitia, dolorem debitis
+            dolore esse quisquam nihil quae fugiat id maiores totam quasi dolores doloremque ducimus voluptates. Ut
+            magnam nemo obcaecati quaerat vitae vero ab impedit temporibus inventore animi nihil vel quidem eos quas
+            harum in id iusto iure sint laboriosam est, eligendi possimus repellat alias. Iste similique, nostrum
+            eligendi deleniti id laborum. Voluptates nulla deleniti impedit nisi eaque quidem dolor quae vitae.
+            Perferendis vero harum placeat animi sed modi, nisi dolores voluptas officiis! Vel similique distinctio
+            perspiciatis cumque delectus eius, quia nostrum explicabo quod architecto ea modi neque deleniti. Alias
+            delectus, in accusamus rem quam neque dolorem eius modi incidunt, vel officia cupiditate nesciunt. Id
+            tenetur rerum suscipit, deserunt sed qui officia hic necessitatibus dolorum corporis deleniti cumque eveniet
+            voluptates, eum ut porro quaerat vitae magni quia commodi cupiditate? Adipisci provident fuga voluptatem
+            repudiandae? Quia aperiam a provident illum explicabo vitae reiciendis consequuntur ratione quasi? Nobis
+            exercitationem praesentium deserunt libero quos dolore, sapiente laudantium sint quas enim soluta ab vero
+            architecto, omnis recusandae ratione cupiditate! Accusamus vero minima quisquam? Asperiores, reiciendis
+            corporis. At sapiente facere eaque ut reprehenderit voluptate numquam aliquam debitis! Beatae quae ea
+            similique non veritatis vero! Placeat voluptas maxime autem, itaque harum repellendus similique perferendis
+            magnam nihil nemo ipsum error, quod numquam voluptatibus tempore at porro id. Tempore id enim hic
+            consequatur ratione quia odit ipsum facere quisquam. Aut eum quidem laboriosam enim iusto, commodi earum
+            quasi vel odit mollitia nam velit in assumenda? Sunt voluptas veniam enim fugiat nam! Exercitationem debitis
+            reiciendis labore expedita quod quisquam pariatur modi minima non quaerat illum neque ipsa aspernatur totam
+            itaque incidunt officia quo, excepturi eum aut doloribus! Quisquam cum in dolor eos nam reiciendis, beatae
+            commodi quae non quia assumenda vero inventore delectus ratione totam sit mollitia eligendi veritatis at
+            dicta voluptatibus dolores? Officia itaque distinctio beatae doloremque nostrum ipsam odit, excepturi ad
+            illum cupiditate fuga facere ea, iste ipsa eligendi totam nobis nesciunt autem tenetur?</p>
+    </div>
+    <div class="mengo-people">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus necessitatibus ratione placeat aut amet.
+            Repellendus voluptas sunt pariatur earum corrupti fugiat. Cum tempore, eaque veritatis magnam enim in porro
+            nemo repellat repudiandae ipsa voluptas ea deserunt ducimus, earum dolores assumenda. Impedit unde animi
+            optio ipsa quaerat! Dolor perferendis est saepe, fugit animi quae quaerat harum neque aspernatur,
+            perspiciatis veritatis laboriosam! Quidem labore, ad reprehenderit blanditiis expedita ex culpa nam eaque
+            voluptatem sit repudiandae non sunt magnam repellat iure similique nemo corrupti, natus quo eum optio. Nulla
+            doloremque culpa cum ipsa? Voluptatibus error incidunt magni accusantium vel minima provident corrupti
+            blanditiis, ea quae ut doloribus exercitationem ab! Ipsa labore sit nostrum similique tempora sequi quia
+            quos in obcaecati temporibus pariatur iusto incidunt autem nulla, ex asperiores unde. Qui soluta aliquam eos
+            voluptate magni repellat libero officiis iste accusamus vero culpa earum odio molestias, explicabo, error
+            reiciendis ipsa cumque! Blanditiis repellat, velit, reiciendis voluptas dicta error reprehenderit eum magnam
+            ratione vel et aperiam harum numquam quod debitis eos ea autem praesentium optio! Rerum, itaque id eius eos
+            a omnis obcaecati accusamus repudiandae voluptatum eaque dolor ratione, corporis nemo aspernatur ipsa, sint
+            provident quibusdam facilis nesciunt aliquid? Earum autem nihil adipisci commodi sapiente!</p>
+    </div>
 </body>
 
 </html>
