--- a/transform.html
+++ b/transform.html
@@ -5,10 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .container,
+        .inner {
+            height: 150px;
+            width: 150px;
+
+            border: 2px solid khaki;
+        }
+
+        .container {
+            background-color: lightblue;
+        }
+
+        .inner {
+            background-color: indianred;
+            transform: translate(50px) scale(0.6) rotate(45deg);
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Transformer is coming</h1>
+    <h1>Transformer I am coming</h1>
+    <div class="box container">
+        <div class="inner">box-1</div>
+    </div>
+    <div class="box container">
+        <div class="inner">box-2</div>
+    </div>
+    <div class="box container">
+        <div class="inner">box-3</div>
+    </div>
 </body>
 
 </html>
